k8s/application/cloud/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-service
  template:
    metadata:
      labels:
        app: gateway-service
    spec:
      containers:
        - name: gateway-service
          image: thsjowi/cloud:1.1.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8100
