k8s/application/cloud/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  labels:
    app: gateway-service
spec:
  selector:
    app: gateway-service
  ports:
    - name: http
      protocol: TCP
      port: 8100         # port within the cluster
      targetPort: 8100    # container port
  type: ClusterIP
