k8s/application/cloud/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    
spec:
  ingressClassName: nginx 
  
  rules:
  - host: gateway.thisjowi.uk
    http:
      paths:
      - path: /gateway
        pathType: Prefix
        backend:
          service:
            name: api-gateway
            port:
              number: 8100
